@@ -130,8 +130,6 @@ var Display = {
      @default 0.25
   */
   vertWordSpaceRate: 0.25,
-
-  // 
   /**
      standard font color. this is required for browsers not supporting writing-mode to display vertical font-images.
 
@@ -167,9 +165,8 @@ var Display = {
   fontFamily:"'ヒラギノ明朝 Pro W3','Hiragino Mincho Pro','HiraMinProN-W3','IPA明朝','IPA Mincho', 'Meiryo','メイリオ','ＭＳ 明朝','MS Mincho', monospace",
   //fontFamily:"'Meiryo','メイリオ','Hiragino Kaku Gothic Pro','ヒラギノ角ゴ Pro W3','Osaka','ＭＳ Ｐゴシック', monospace",
 
-  // font sizes defined by name
   /**
-     pre defined font-name values.
+     font sizes defined by name
 
      @memberof Nehan.Display
      @type {Object}
