@@ -11,6 +11,7 @@ version 5.0.5 ????
 o new method "addContent" for NehanPagedElement to push addional text to paged-element.
 o add "nehan-clone" class to the blocks generated by cloned style.
 o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.
+o add Config.enableInlineStyle to enable inline style attribute or not.
 * treat "true" or "false" value in dataset as 'boolean'.
 ! rename LayoutContext(layout-context.js) to CursorContext(cursor-context.js).
 ! rename Layout(layout.js) to Display(display.js).
